force-app/main/default/objects/Movie_Film_Rating__c/Movie_Film_Rating__c.object-meta.xml
<CustomObject>
    <label>Movie Film Rating</label>
    <nameField>
        <label>Movie Film Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Film Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>