force-app/main/default/objects/Movie_Film_Rating__c/fields/movieId__c.field-meta.xml
<CustomField>
    <fullName>movieId__c</fullName>
    <label>movieId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>