force-app/main/default/objects/Movie_Film_Rating__c/fields/movieIds__c.field-meta.xml
<CustomField>
    <fullName>movieIds__c</fullName>
    <label>movieIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>