force-app/main/default/objects/Movie_Film_Rating__c/fields/MovieName__c.field-meta.xml
<CustomField>
    <fullName>MovieName__c</fullName>
    <label>MovieName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>